# PyScanner

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile  compose.yml
src/pyscanner/: __init__.py
src/pyscanner/cli/: __init__.py  main.py  output.py
src/pyscanner/config/: __init__.py  settings.py
src/pyscanner/core/: __init__.py  pipeline.py  remediation.py  scoring.py
src/pyscanner/ingestion/: __init__.py  ast_parse.py  discovery.py  manifests.py  reader.py
src/pyscanner/learning/: __init__.py  promotion.py  rule_validator.py  shadow_generator.py
src/pyscanner/llm/: __init__.py  runner.py  schemas.py
src/pyscanner/llm/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  ollama_provider.py  openai_provider.py
src/pyscanner/mcp/: __init__.py  server.py
src/pyscanner/models/: __init__.py  findings.py  raw.py
src/pyscanner/persistence/: __init__.py  sqlite_store.py
src/pyscanner/reporting/: __init__.py  csv_report.py  json_report.py  markdown_report.py  sarif.py
src/pyscanner/reporting/html/: __init__.py  render.py
src/pyscanner/sast/: __init__.py  engine.py
src/pyscanner/security/: __init__.py  redaction.py  secrets_manager.py
src/pyscanner/slicer/: __init__.py  budgets.py  scope_graph.py  slice_builder.py
src/pyscanner/telemetry/: __init__.py  otel.py
src/pyscanner/triage/: __init__.py  prompts.py  router.py  slm_client.py
tests/: test_file_upload.py  test_misconfiguration.py  test_path_traversal.py  test_slice.py  test_sql_injection.py  test_subprocess_rules.py  test_supply_chain.py  test_xss.py
(+14 files in other folders)
