[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyscanner"
version = "0.1.0"
description = "AI-powered hybrid SAST for Python codebases"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "PyScanner" }]
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "libcst>=1.2.0",
  "httpx>=0.27",
  "rich>=13.7",
  "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "ruff>=0.4",
]
mcp = [
  "mcp>=1.0.0",
]
all = ["pyscanner[mcp,dev]"]

[project.scripts]
pyscanner = "pyscanner.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pyscanner"]

[tool.hatch.build.targets.sdist]
include = ["src/pyscanner", "README.md", "pyproject.toml", "tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
